# writ

./: .gitignore  METHODOLOGY.md  README.md  config.example.py  docker-compose.yml  env.example  index.html  pyproject.toml  requirements.txt  schema.example.yaml  server.py  styles.css
.github/workflows/: deploy.yml
infrastructure/: stack-template.yaml
lambda/query_handler/: lambda_function.py
lib/: __init__.py  document_loader.py
query/: __init__.py  cypher_guard.py  nlp_engine_template.py
scripts/: backup_neo4j.py  embed_documents.py  entity_extractor_template.py  fix_orphaned_entities.py  ingest_template.py  validate_data_quality.py
scripts/diagnostics/: inspect_graph.py  test_neo4j_connection.py
tests/: conftest.py
tests/integration/: test_graph_queries.py
tests/unit/: test_cypher_guard.py  test_lambda_handler.py  test_query_validation.py
utils/: rerank.py
validation/: __init__.py  base.py  run_validation.py
validation/cases/: generic.json
